blackroad-sf/force-app/main/default/objects/GitHubRepo__c/GitHubRepo__c.object-meta.xml
<CustomObject>
    <label>GitHub Repo</label>
    <pluralLabel>GitHub Repos</pluralLabel>
    <nameField><label>Repo Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>