blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/DefaultBranch__c.field-meta.xml
<CustomField>
    <fullName>DefaultBranch__c</fullName>
    <label>Default Branch</label>
    <type>Text</type>
    <length>80</length>
</CustomField>