blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/Forks__c.field-meta.xml
<CustomField>
    <fullName>Forks__c</fullName>
    <label>Forks</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>