blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>Full Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>