blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <label>Is Archived</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>