blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/IsFork__c.field-meta.xml
<CustomField>
    <fullName>IsFork__c</fullName>
    <label>Is Fork</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>