blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <label>Is Private</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>