blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Primary Language</label>
    <type>Text</type>
    <length>80</length>
</CustomField>