blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/LastPushAt__c.field-meta.xml
<CustomField>
    <fullName>LastPushAt__c</fullName>
    <label>Last Push</label>
    <type>DateTime</type>
</CustomField>