blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/OpenIssues__c.field-meta.xml
<CustomField>
    <fullName>OpenIssues__c</fullName>
    <label>Open Issues</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>