blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <label>GitHub Org</label>
    <type>Text</type>
    <length>255</length>
</CustomField>