blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/RepoId__c.field-meta.xml
<CustomField>
    <fullName>RepoId__c</fullName>
    <label>Repo ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>