blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/RepoUrl__c.field-meta.xml
<CustomField>
    <fullName>RepoUrl__c</fullName>
    <label>Repo URL</label>
    <type>Url</type>
</CustomField>