blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>