blackroad-sf/force-app/main/default/objects/GitHubRepo__c/fields/WorkflowStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkflowStatus__c</fullName>
    <label>Last Workflow Status</label>
    <type>Text</type>
    <length>80</length>
</CustomField>